# MINet

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/Core/: CMakeLists.txt  Connection.h  NetTypes.h
Client/exe/: CMakeLists.txt
Core/: QuickMessage.cpp
